added sass to gulp

--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -1,10 +1,14 @@
+@import "./reset/basic-reset";
+
+$grey: #eee;
+
 body {
+	background: $grey;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
 	height: 100vh;
-	background-color: #eee;
 }
 
 img {
